Fix navbar spacing

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -55,11 +55,9 @@
 
 .nav-item {
     height: 12vh;
-    display: table;
 }
 
 .nav-item-mobile {
-    display: table;
     font-size: 80%;
     height: 7.9vh;
     background-color: #FCFCFC;
@@ -72,10 +70,12 @@
 .nav-link {
     color: #9AACB6 !important;
     font-size: 100%;
+    height: 100%;
     font-weight: 500;
-    display: table-cell;
-    vertical-align: middle;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .navbar-toggler {
